fixed pointr envents on mobile screens

--- a/src/components/List/Card.module.scss
+++ b/src/components/List/Card.module.scss
@@ -48,6 +48,7 @@
     }
   }
   @media screen and (max-width: 480px) {
+    pointer-events: none;
     position: relative;
     .projectManager,
     .status {
